ImpressCMS ChangeLog


=== ImpressCMS 1.2.1 Final ===
Release date: 
Revision:
DB Version: 39
Build Version: 35

http://trac.impresscms.org/core/query?status=closed&group=resolution&milestone=ImpressCMS+1.2.1


=== ImpressCMS 1.2.1 RC ===
Release date: 1 Mar 2010
Revision: 9881
DB Version: 39
Build Version: 34

http://trac.impresscms.org/core/query?status=closed&group=resolution&milestone=ImpressCMS+1.2.1

=== ImpressCMS 1.2.1 Beta ===
Release date: 11 Feb 2010
Revision: 9841
DB Version: 39
Build Version: 33

* #913: Fixing isue with Code / Pre tag (thomas)
* #874: Fixing error on Admin Installed Modules Block about calling a method from a non-object with annonymous users. (nekro)
* #875: Fixing error on Admin CP Block about calling a method from a non-object with annonymous users. (nekro)
* #876: Adding a default value for the field Weight of the blocks. (nekro)
* #806: Adding requited labels to block, blockposition and symlink objects. (nekro)
* #879: Removing rank images from the uploads folder. (nekro)
* #867: installer is now checking for PHP 5.3 (phoenyx)
* #878: fixed missing variable in user activision email (phoenyx)
* #662: fixed check for theme_use_smarty in footer.php (phoenyx)
* #905: XOBJ_DTYPE_STIME, XOBJ_DTYPE_MTIME, XOBJ_DTYPE_LTIME is now handled correctly (phoenyx)
* #907: Simplified inclusions in the image editor library (skenow)
* #402: changing encryption should not be possible when site is set to closed. (vaughan)

=== ImpressCMS 1.2 Final ===
Release date: 13 Dec 2009
Revision: 9648
DB Version: 38
Build Version: 32

* #862: Removing inclusion to deprecated sqlutility classes (malanciault)

=== ImpressCMS 1.2 RC2 ===
Release date: 6 Dec 2009
Revision: 9635
DB Version: 38
Build Version: 31

* #856: image manager allows illegal characters in the folder name of a new category (skenow)
* #843: Create a language constant for the update process (about permission for Plugins and Preload folders) (malanciault)